Do tokens refactoring
