# src/main/java/com/eshilov/auth/token/TokenController.java
@@ -2,8 +2,8 @@ package com.eshilov.auth.token;
 
 import static org.springframework.http.HttpStatus.OK;
 
-import com.eshilov.auth.generated.api.TokenApi;
-import com.eshilov.auth.generated.model.RefreshTokenRequest;
+import com.eshilov.auth.generated.api.TokensApi;
+import com.eshilov.auth.generated.model.RefreshTokensRequest;
 import com.eshilov.auth.generated.model.TokenPair;
 import javax.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -12,13 +12,14 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
-public class TokenController implements TokenApi {
+public class TokenController implements TokensApi {
 
     private final TokenService tokenService;
 
     @Override
-    public ResponseEntity<TokenPair> refreshToken(@Valid RefreshTokenRequest refreshTokenRequest) {
-        var response = tokenService.refreshTokenPair(refreshTokenRequest);
+    public ResponseEntity<TokenPair> refreshTokens(
+            @Valid RefreshTokensRequest refreshTokensRequest) {
+        var response = tokenService.refreshTokens(refreshTokensRequest);
         return ResponseEntity.status(OK).body(response);
     }
 }
