# src/main/resources/openapi/openapi.yml
@@ -40,15 +40,15 @@ paths:
             applicaiton/json:
               schema:
                 $ref: '#/components/schemas/TokenPair'
-  /token/refresh:
+  /tokens/refresh:
     post:
-      operationId: refreshToken
+      operationId: refreshTokens
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RefreshTokenRequest'
+              $ref: '#/components/schemas/RefreshTokensRequest'
       responses:
         '200':
           description: Ok
@@ -105,8 +105,8 @@ components:
           format: email
         password:
           $ref: '#/components/schemas/DefaultNonEmptyString'
-    RefreshTokenRequest:
+    RefreshTokensRequest:
       type: object
       properties:
-        token:
+        refreshToken:
           type: string
